Работает, но стилям ппц

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
         <div id="statusSub" class="status__sub"></div>
         <button id="retryBtn" class="status__retry" type="button">Повторить</button>
       </div>
-      <div id="grid" class="gameList"></div>
+      <div class="catalog__content">
+        <div id="grid" class="ivu-row ivu-row-flex"></div>
+      </div>
     </div>
   </body>
 </html>
