--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,15 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="https://drova.io/index.min.css" />
+    <link rel="stylesheet" href="index.min.css" />
     <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drova Launcher</title>
     <script type="module" src="/main.js" defer></script>
   </head>
 
-  <body>
-    <div id="app" class="app">
+  <body class="theme_foxexeDark page_games">
+    <div id="app" class="app catalog">
       <div id="status" class="status is-hidden">
         <div id="statusText" class="status__text">Загрузка…</div>
         <div id="statusSub" class="status__sub"></div>
